--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity">
+    tools:context=".Main2Activity"
+    android:gravity="center|top">
 
 
     <android.support.v7.widget.RecyclerView
+
         android:id="@+id/rvFirebase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
