--- a/app/src/main/res/layout/image.xml
+++ b/app/src/main/res/layout/image.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:id="@+id/ivRetrieved"
